--- a/content/pages/rules/credentials/127/index.adoc
+++ b/content/pages/rules/credentials/127/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/127/
 :category: credentials
 :description: This requirement establishes the importance of defining cryptographic mechanisms to store passwords securely and avoid common attacks.
-:keywords: Passwords, Hash, Algorithms, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
+:keywords: Passwords, Hash, Algorithms, ASVS, CWE, NIST, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R127. Store hashed passwords
@@ -50,3 +50,8 @@ Verify that if bcrypt is used,
 the work factor SHOULD be as large as verification server performance will
 allow,
 typically at least 13.
+
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.1]
+Using strong cryptography, render all authentication credentials
+(such as passwords/phrases) unreadable during transmission and storage on all
+system components.
