--- a/content/pages/rules/session/023/index.adoc
+++ b/content/pages/rules/session/023/index.adoc
@@ -113,3 +113,7 @@ to allow **RP**s to determine if they need to re-authenticate the user.
 . [[r12]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
+
+. [[r13]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.8]
+If a session has been idle for more than 15 minutes,
+require the user to re-authenticate to re-activate the terminal or session.
