--- a/content/pages/rules/authentication/229/index.adoc
+++ b/content/pages/rules/authentication/229/index.adoc
@@ -86,3 +86,10 @@ broken authentication and session management.
 . [[r10]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.1]
 Assign all users a unique ID before allowing them to access system components
 or cardholder data.
+
+. [[r11]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2]
+In addition to assigning a unique ID,
+ensure proper user-authentication management for non-consumer users and
+administrators on all system components by employing at least a password,
+a passphrase, a token device, a smart card or a biometric to authenticate all
+users.
