--- a/content/pages/rules/authorization/096/index.adoc
+++ b/content/pages/rules/authorization/096/index.adoc
@@ -115,6 +115,9 @@ Define access needs for each role,
 including level of privilege required (for example, user, administrator, etc.)
 for accessing resources.
 
-. [[r17]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.2.2]
+. [[r17]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.1.3]
+Assign access based on individual personnel’s job classification and function.
+
+. [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.2.2]
 This access control system(s) must include assignment of privileges to
 individuals based on job classification and function.
