--- a/content/pages/rules/data/181/index.adoc
+++ b/content/pages/rules/data/181/index.adoc
@@ -212,3 +212,8 @@ Never send unprotected **PAN**s by end-user messaging technologies
 . [[r29]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.4]
 Address common coding vulnerabilities in software-development processes such as
 insecure communications.
+
+. [[r30]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.1]
+Using strong cryptography, render all authentication credentials
+(such as passwords/phrases) unreadable during transmission and storage on all
+system components.
