feat(doc): #3596.12 add pci refs to some rules
- Added PCI DSS references to R132, R133, R130, R129 and R126
- Updated R132, R133, R130, R129 and R126 keywords


Former-commit-id: c425834ec5cb7e7892a32beed9ca86f50db84e8f

--- a/content/pages/rules/credentials/129/index.adoc
+++ b/content/pages/rules/credentials/129/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/129/
 :category: credentials
 :description: This requirement establishes the importance of validating passwords changes to ensure that the new passwords do not match previous user passwords.
-:keywords: System, Requirement, Password, Update, Validation, Security, Rules, Ethical Hacking, Pentesting
+:keywords: System, Requirement, Password, Update, Validation, PCI DSS, Security, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R129. Validate previous passwords
@@ -11,3 +11,9 @@
 The system must not allow password changes for a user
 if the new password matches one of the previous *5* passwords
 for the same user.
+
+== References
+
+. [[r1]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.5]
+Do not allow an individual to submit a new password/passphrase that is the same
+as any of the last four passwords/passphrases he or she has used.
