--- a/content/pages/rules/credentials/132/index.adoc
+++ b/content/pages/rules/credentials/132/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/132/
 :category: credentials
 :description: This requirement establishes the importance of defining passphrases with at least 4 words and allowing them to be more than 64 characters long.
-:keywords: Password, Length, Passphrase, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
+:keywords: Password, Length, Passphrase, ASVS, CWE, NIST, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R132. Passphrases with at least 4 words
@@ -38,3 +38,7 @@ characters in length.
 . [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.1 Password Security Requirements.(2.1.2)]
 Verify that passwords 64 characters or longer are permitted.
+
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.3]
+Passwords/passphrases must require a minimum length of at least seven
+characters or equivalent complexity and strength.
