--- a/content/pages/rules/credentials/133/index.adoc
+++ b/content/pages/rules/credentials/133/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/133/
 :category: credentials
 :description: This requirement establishes the importance of defining secure passwords with a length of at least 20 characters.
-:keywords: Credentials, Access, Password, Length, CWE, ASVS, Rules, Ethical Hacking, Pentesting
+:keywords: Credentials, Access, Password, Length, CWE, ASVS, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R133. Passwords with at least 20 characters
@@ -25,3 +25,7 @@ which makes it easier for attackers to compromise user accounts.
 . [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.1 Password Security Requirements.(2.1.1)]
 Verify that user set passwords are at least 12 characters in length.
+
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.3]
+Passwords/passphrases must require a minimum length of at least seven
+characters or equivalent complexity and strength.
