--- a/content/pages/rules/credentials/126/index.adoc
+++ b/content/pages/rules/credentials/126/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/126/
 :category: credentials
 :description: This requirement establishes the importance of defining a mechanism to regenerate user passwords securely.
-:keywords: Passwords, Retrieve, Restore, Credentials, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Passwords, Retrieve, Restore, Credentials, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R126. Set a password regeneration mechanism
@@ -54,3 +54,7 @@ Verify forgotten password, and other recovery paths use a secure recovery
 mechanism,
 such as TOTP or other soft token, mobile push, or another offline recovery
 mechanism.
+
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.5]
+Do not allow an individual to submit a new password/passphrase that is the same
+as any of the last four passwords/passphrases he or she has used.
