--- a/content/pages/rules/credentials/130/index.adoc
+++ b/content/pages/rules/credentials/130/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/130/
 :category: credentials
 :description: This requirement establishes that the system must not allow its passwords to have a lifespan of more than 30 days.
-:keywords: Password, Validity, Security, Expiration, Limit, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Password, Validity, Security, Expiration, Limit, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R130. Limit password lifespan
@@ -19,3 +19,6 @@ Passwords must be valid for a maximum of *30* days.
 . [[r1]] link:https://cwe.mitre.org/data/definitions/263.html[CWE-263: Password Aging with Long Expiration].
 Allowing password aging to occur unchecked can result in the possibility of
 diminished password integrity.
+
+. [[r2]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.4]
+Change user passwords/passphrases at least once every 90 days.
