feat(doc): #3596.13 add refs to some rules
- Added PCI DSS references to R136, R137, R328 and R143
- Added ASVS, CWE and NIST references to R137
- Added a Description to R137
- Updated R136 and R137 keywords


Former-commit-id: 5613d911e0e038feb7d6fbc2755f96bcbc7d55da

--- a/content/pages/rules/credentials/136/index.adoc
+++ b/content/pages/rules/credentials/136/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/136/
 :category: credentials
 :description: This requirement establishes the importance of defining mechanisms to force users to change temporary passwords after their first use.
-:keywords: Force, Temporary Passwords, Change, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
+:keywords: Force, Temporary Passwords, Change, ASVS, CWE, NIST, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R136. Force temporary password changing
@@ -33,3 +33,8 @@ securely randomly generated, SHOULD be at least 6 characters long,
 and MAY contain letters and numbers,
 and expire after a short period of time.
 These initial secrets must not be permitted to become the long term password.
+
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.6]
+Set passwords/passphrases for first-time use and upon reset to a unique value
+for each user,
+and change immediately after the first use.
