--- a/content/pages/rules/credentials/143/index.adoc
+++ b/content/pages/rules/credentials/143/index.adoc
@@ -31,3 +31,7 @@ broken authentication and session management.
 . [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.1]
 Assign all users a unique ID before allowing them to access system components
 or cardholder data.
+
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.5]
+Do not use group, shared, or generic IDs, passwords, or other authentication
+methods.
