--- a/content/pages/rules/authentication/328/index.adoc
+++ b/content/pages/rules/authentication/328/index.adoc
@@ -103,3 +103,13 @@ directory traversal, and failure to restrict user access to functions).
 . [[r14]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
+
+. [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.3.1]
+Incorporate multi-factor authentication for all non-console access into the
+CDE (Cardholder Data Environment) for personnel with administrative access.
+
+. [[r16]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.3.2]
+Incorporate multi-factor authentication for all remote network access
+(both user and administrator, and including third-party access for support or
+maintenance)
+originating from outside the entity’s network.
