feat(doc): #3596.15 add pci refs to some rules
- Added PCI DSS references to R265, R033 and R183


Former-commit-id: 0d7a74ddf603b827d358df7311b79ba88553b56b

--- a/content/pages/rules/data/183/index.adoc
+++ b/content/pages/rules/data/183/index.adoc
@@ -102,3 +102,8 @@ or as the situation requires.
 Keep cardholder data storage to a minimum by implementing data retention and
 disposal policies, procedures and processes for secure deletion of data when no
 longer needed.
+
+. [[r14]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 9.8.2]
+Destroy media when it is no longer needed for business or legal reasons.
+Render cardholder data on electronic media unrecoverable so that cardholder
+data cannot be reconstructed.
