--- a/content/pages/rules/services/265/index.adoc
+++ b/content/pages/rules/services/265/index.adoc
@@ -96,3 +96,7 @@ Address common coding vulnerabilities in software-development processes
 including improper access control
 (such as insecure direct object references, failure to restrict URL access,
 directory traversal, and failure to restrict user access to functions).
+
+. [[r13]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.7]
+Restrict access to any database so that only database administrators have the
+ability to directly access or query databases.
